@@ -894,7 +894,7 @@ def test_retrieve_keywords_from_tms(application):
             tms.return_value = [mock.sentinel.tag]
             assert view.keywords == [mock.sentinel.tag]
             assert not kw.called
-            tms.assert_called_with(article, timeout=0.42)
+            tms.assert_called_with(article, timeout=0.42, published=True)
 
 
 def test_fall_back_on_vivi_keywords_on_tms_failure(application):
